--- a/scss/vvvebjs-editor-helpers.scss
+++ b/scss/vvvebjs-editor-helpers.scss
@@ -80,6 +80,22 @@ Prevents iframe mouse events that prevents clicking on the component
 	}
 }
 
+.is-dragged {
+	pointer-events:none;
+	opacity:0.15;
+	position:relative;
+	/*
+	&:after {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		background: rgba(255,255,0,0.1);
+		content: " ";
+		top: 0;
+	}*/
+}
+
 .vvveb-hidden {
 	display:none !important;;
 }
